--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -20,10 +20,11 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
 
-  config.vm.box = "ubuntu/focal64"
   config.vm.synced_folder "../shared", "/vagrant_data"
   
   config.vm.define "psqlVM" do |psqlVM|
+
+    psqlVM.vm.box = "ubuntu/trusty64"
     psqlVM.vm.hostname = "psqlVM"
 
     # Disable automatic box update checking. If you disable this, then
@@ -104,16 +105,17 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "cassandraVM" do |cassandraVM|
 
-
+    
     cassandraVM.vm.provider "virtualbox" do |vb|
       # Display the VirtualBox GUI when booting the machine
       # vb.gui = true
-    
+      
       # Customize the amount of memory on the VM:
       vb.memory = "2048"
     end
-
+    
     cassandraVM.vm.hostname = "cassandraVM"
+    cassandraVM.vm.box = "ubuntu/focal64"
 
     cassandraVM.vm.network "private_network", ip: "192.168.33.40"
     # cassandraVM.vm.network "public_network"
@@ -134,12 +136,53 @@ Vagrant.configure("2") do |config|
       DRY_RUN=1 sudo sh ./get-docker.sh
       sudo docker pull cassandra
       sudo docker network create cassandra
-      sudo docker run --rm -d --name cassandra --hostname cassandra -p 9042:9042 -p 9160:9160 --network cassandra cassandra
+      sudo mkdir -p /cassandra/data
+      sudo docker run --rm -d --name cassandra --hostname cassandra -v /cassandra/data:/var/lib/cassandra -p 9042:9042 -p 9160:9160 --network cassandra cassandra
       sudo docker run --rm --network host -v "vagrant_data/create_db_userapi.cql" -e CQLSH_HOST=cassandra -e CQLSH_PORT=9042 -e CQLVERSION=3.4.5 nuvo/docker-cqlsh
+      #sudo docker run --rm -it --network cassandra nuvo/docker-cqlsh cqlsh cassandra 9042 --cqlversion='3.4.5'
       SHELL
 
     cassandraVM.vm.provision "shell", run: "always", inline: <<-SHELL
-      sudo docker run --rm -d --name cassandra --hostname cassandra -p 9042:9042 -p 9160:9160 --network cassandra cassandra
+      sudo docker run --rm -d --name cassandra --hostname cassandra -v /cassandra/data:/var/lib/cassandra -p 9042:9042 -p 9160:9160 --network cassandra cassandra
+      SHELL
+    
+  end
+
+  config.vm.define "dockerVM" do |dockerVM|
+
+    
+    dockerVM.vm.provider "virtualbox" do |vb|
+      # Display the VirtualBox GUI when booting the machine
+      # vb.gui = true
+      
+      # Customize the amount of memory on the VM:
+      vb.memory = "4096"
+      vb.cpus = 4
+    end
+    
+    dockerVM.vm.hostname = "dockerVM"
+    dockerVM.vm.box = "ubuntu/focal64"
+
+    dockerVM.vm.network "private_network", ip: "192.168.33.50"
+    # dockerVM.vm.network "public_network"
+
+    dockerVM.vm.provision "shell", inline: <<-SHELL
+      apt-get update
+
+      curl -fsSL https://get.docker.com -o get-docker.sh
+      DRY_RUN=1 sudo sh ./get-docker.sh
+      sudo mkdir -p /cassandra/data
+      # sudo docker network create cassandra
+      
+      # sudo docker pull cassandra
+      # sudo docker run --rm -d --name cassandra --hostname cassandra -v /cassandra/data:/var/lib/cassandra -p 9042:9042 -p 9160:9160 --network cassandra cassandra
+      # sudo docker run --rm --network host -v "vagrant_data/create_db_userapi.cql" -e CQLSH_HOST=cassandra -e CQLSH_PORT=9042 -e CQLVERSION=3.4.5 nuvo/docker-cqlsh
+      #sudo docker run --rm -it --network cassandra nuvo/docker-cqlsh cqlsh cassandra 9042 --cqlversion='3.4.5'
+      SHELL
+
+    dockerVM.vm.provision "shell", run: "always", inline: <<-SHELL
+      echo "EVERY RUN PROVISION"
+      # sudo docker run --rm -d --name cassandra --hostname cassandra -p 9042:9042 -p 9160:9160 --network cassandra cassandra
       SHELL
     
   end
