--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -163,6 +163,7 @@ Vagrant.configure("2") do |config|
     dockerVM.vm.hostname = "dockerVM"
     dockerVM.vm.box = "ubuntu/focal64"
 
+    dockerVM.vm.synced_folder "../", "/vagrant_data"
     dockerVM.vm.network "private_network", ip: "192.168.33.50"
     # dockerVM.vm.network "public_network"
 
@@ -172,6 +173,7 @@ Vagrant.configure("2") do |config|
       curl -fsSL https://get.docker.com -o get-docker.sh
       DRY_RUN=1 sudo sh ./get-docker.sh
       sudo mkdir -p /cassandra/data
+      sudo mkdir -p /postgres/data
       # sudo docker network create cassandra
       
       # sudo docker pull cassandra
@@ -182,7 +184,7 @@ Vagrant.configure("2") do |config|
 
     dockerVM.vm.provision "shell", run: "always", inline: <<-SHELL
       echo "EVERY RUN PROVISION"
-      # sudo docker run --rm -d --name cassandra --hostname cassandra -p 9042:9042 -p 9160:9160 --network cassandra cassandra
+      sudo docker compose -f /vagrant_data/shared/dockerVM/docker-compose.yml up -d
       SHELL
     
   end
