--- a/shared/dockerVM/docker-compose.yml
+++ b/shared/dockerVM/docker-compose.yml
@@ -44,6 +44,8 @@ services:
     build: /vagrant_data
     container_name: userapi
     restart: always
+    volumes: 
+      - /vagrant_data/docs:/docs
     ports:
       - '8200:8200'
       - '8201:8201'
