--- a/shared/dockerVM/docker-compose.yml
+++ b/shared/dockerVM/docker-compose.yml
@@ -50,3 +50,33 @@ services:
     environment:
       - PG_HOST=postgres
       - CASSANDRA_HOST=cassandra
+
+  zookeeper:
+    image: docker.io/bitnami/zookeeper:3.8
+    ports:
+      - "2181:2181"
+    volumes:
+      - "/zookeeper/data:/var/lib/zookeeper/data"
+      - "/zookeeper/logs:/var/lib/zookeeper/log"
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+  kafka:
+    image: docker.io/bitnami/kafka:3.2
+    # hostname: kafka-1
+    ports:
+      - "9092:9092"
+      - "19092:19092"
+    volumes:
+      - "/kafka/data:/var/lib/kafka/data"
+    environment:
+      - KAFKA_BROKER_ID=1
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT:/192.168.33.50:9092, CONNECTIONS_FROM_HOST://192.168.33.50:19092
+      - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP:PLAINTEXT:PLAINTEXT,CONNECTIONS_FROM_HOST:PLAINTEXT
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+      - ALLOW_PLAINTEXT_LISTENER=yes
+    depends_on:
+      - zookeeper
+
+      # . /opt/bitnami/kafka/bin/windows/kafka-topics.sh --create --bootstrap-server kafka-kafka-1:9092 --replication-factor 1 --partitions 1 --topic messages
