--- a/shared/dockerVM/docker-compose.yml
+++ b/shared/dockerVM/docker-compose.yml
@@ -60,13 +60,13 @@ services:
         - "/zookeeper:/bitnami/"
       environment:
         - ALLOW_ANONYMOUS_LOGIN=yes
-  kafka:
+  kafka-1:
       image: docker.io/bitnami/kafka:3.2
       container_name: kafka-1
       ports:
         - "9092:9092"
       volumes:
-        - "/kafka:/bitnami/kafka/data"
+        - "/kafka/broker-1:/bitnami/kafka/data"
       environment:
         - KAFKA_BROKER_ID=1
         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
@@ -75,8 +75,51 @@ services:
         - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
         - ALLOW_PLAINTEXT_LISTENER=yes
         - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+        - KAFKA_DEFAULT_REPLICATION_FACTOR=3
+        - KAFKA_NUM_PARTITIONS=3
       depends_on:
         - zookeeper
+  kafka-2:
+      image: docker.io/bitnami/kafka:3.2
+      container_name: kafka-2
+      volumes:
+        - "/kafka/broker-2:/bitnami/kafka/data"
+      environment:
+        - KAFKA_BROKER_ID=2
+        - KAFKA_CFG_LISTENERS=PLAINTEXT://:9093
+        # teraz ip to adres vm, jeśli producenci i konsumenci będą na dockerze to trzeba będzie zmienić pewnie na nazwy serwisów
+        - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka-2:9093
+        - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+        - ALLOW_PLAINTEXT_LISTENER=yes
+        - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+        - KAFKA_DEFAULT_REPLICATION_FACTOR=3
+        - KAFKA_NUM_PARTITIONS=3
+      depends_on:
+        - zookeeper
+  kafka-3:
+      image: docker.io/bitnami/kafka:3.2
+      container_name: kafka-3
+      volumes:
+        - "/kafka/broker-3:/bitnami/kafka/data"
+      environment:
+        - KAFKA_BROKER_ID=3
+        - KAFKA_CFG_LISTENERS=PLAINTEXT://:9094
+        # teraz ip to adres vm, jeśli producenci i konsumenci będą na dockerze to trzeba będzie zmienić pewnie na nazwy serwisów
+        - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka-3:9094
+        - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+        - ALLOW_PLAINTEXT_LISTENER=yes
+        - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+        - KAFKA_DEFAULT_REPLICATION_FACTOR=3
+        - KAFKA_NUM_PARTITIONS=3
+      depends_on:
+        - zookeeper
+  consumer:
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
+    build: /consumer_data
+    container_name: consumer
 
         # (cd /opt/bitnami/kafka/bin/windows/; ./kafka-topics.sh --create --bootstrap-server kafka-kafka-1:9092 --replication-factor 1 --partitions 1 --topic messages)
-        # . /opt/bitnami/kafka/bin/windows/kafka-topics.sh --create --bootstrap-server kafka-1:9092 --replication-factor 1 --partitions 1 --topic messages
+        # kafka-topics.sh --create --bootstrap-server kafka-1:9092 --replication-factor 1 --partitions 1 --topic messages
