--- a/shared/dockerVM/docker-compose.yml
+++ b/shared/dockerVM/docker-compose.yml
@@ -1,13 +1,18 @@
 version: '3.9'
 
+networks:
+  default: 
+    name: redisnet
+    external: true
+
 services:
   cassandra:
     image: cassandra
     container_name: cassandra
     restart: always
-    ports:
-      - 9042:9042
-      - 9160:9160
+    # ports:
+      # - 9042:9042
+      # - 9160:9160
     volumes:
       - /cassandra/data:/var/lib/cassandra
       - /vagrant_data:/shared
@@ -25,8 +30,8 @@ services:
     environment:
       - POSTGRES_USER=userapi
       - POSTGRES_PASSWORD=userapi
-    ports:
-      - '5432:5432'
+    # ports:
+      # - '5432:5432'
     volumes: 
       - /postgres/data:/var/lib/postgresql/data
       - /vagrant_data:/shared
@@ -35,12 +40,21 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  redis-server:
+    image: redis
+    container_name: redis-server
+    command: ["redis-server"]
+    
   userapi:
     depends_on:
       cassandra:
         condition: service_healthy
       postgres:
         condition: service_healthy
+      redis-server:
+        condition: service_started
+
     build: /vagrant_data
     container_name: userapi
     restart: always
@@ -50,6 +64,7 @@ services:
     environment:
       - PG_HOST=postgres
       - CASSANDRA_HOST=cassandra
+      - REDIS_HOST=redis-server
 
   zookeeper:
       image: docker.io/bitnami/zookeeper:3.8
@@ -87,7 +102,6 @@ services:
       environment:
         - KAFKA_BROKER_ID=2
         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9093
-        # teraz ip to adres vm, jeśli producenci i konsumenci będą na dockerze to trzeba będzie zmienić pewnie na nazwy serwisów
         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka-2:9093
         - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
         - ALLOW_PLAINTEXT_LISTENER=yes
@@ -104,7 +118,6 @@ services:
       environment:
         - KAFKA_BROKER_ID=3
         - KAFKA_CFG_LISTENERS=PLAINTEXT://:9094
-        # teraz ip to adres vm, jeśli producenci i konsumenci będą na dockerze to trzeba będzie zmienić pewnie na nazwy serwisów
         - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka-3:9094
         - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
         - ALLOW_PLAINTEXT_LISTENER=yes
@@ -123,3 +136,7 @@ services:
 
         # (cd /opt/bitnami/kafka/bin/windows/; ./kafka-topics.sh --create --bootstrap-server kafka-kafka-1:9092 --replication-factor 1 --partitions 1 --topic messages)
         # kafka-topics.sh --create --bootstrap-server kafka-1:9092 --replication-factor 1 --partitions 1 --topic messages
+        
+        # sudo docker run --name redis-server --network redisnet -d redis
+        # sudo docker run -it --network redisnet redis bash
+        # redis-cli -h redis-server
