--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ vagrant/.vagrant/machines/dockerVM/virtualbox/action_set_name
 vagrant/.vagrant/machines/dockerVM/virtualbox/id
 vagrant/.vagrant/machines/dockerVM/virtualbox/index_uuid
 vagrant/.vagrant/machines/dockerVM/virtualbox/private_key
+
+vagrant/.vagrant/machines/cassandraVM/virtualbox/vagrant_cwd
+vagrant/.vagrant/machines/dockerVM/virtualbox/synced_folders
+vagrant/.vagrant/machines/dockerVM/virtualbox/vagrant_cwd
+vagrant/.vagrant/machines/psqlVM/virtualbox/vagrant_cwd
