--- a/shared/dockerVM/docker-compose.yml
+++ b/shared/dockerVM/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       retries: 5
 
   redis-server:
-    image: redis
+    image: redis:6.2.7
     container_name: redis-server
     command: ["redis-server"]
     
