--- a/shared/dockerVM/docker-compose.yml
+++ b/shared/dockerVM/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 
-networks:
-  default: 
-    name: redisnet
-    external: true
+# networks:
+#   default: 
+#     name: redisnet
+#     external: true
 
 services:
   cassandra:
@@ -48,12 +48,9 @@ services:
     
   userapi-1:
     depends_on:
-      cassandra:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
-      redis-server:
-        condition: service_started
+      - cassandra
+      - postgres
+      - redis-server
 
     build: /vagrant_data
     container_name: userapi-1
@@ -67,16 +64,12 @@ services:
       - PG_HOST=postgres
       - CASSANDRA_HOST=cassandra
       - REDIS_HOST=redis-server
-      - JWT_KEY=userapi-1
 
   userapi-2:
     depends_on:
-      cassandra:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
-      redis-server:
-        condition: service_started
+      - cassandra
+      - postgres
+      - redis-server
 
     build: /vagrant_data
     container_name: userapi-2
@@ -95,8 +88,8 @@ services:
   zookeeper:
       image: docker.io/bitnami/zookeeper:3.8
       container_name: zookeper-1
-      ports:
-        - "2181:2181"
+      # ports:
+        # - "2181:2181"
       volumes:
         - "/zookeeper:/bitnami/"
       environment:
@@ -104,8 +97,8 @@ services:
   kafka-1:
       image: docker.io/bitnami/kafka:3.2
       container_name: kafka-1
-      ports:
-        - "9092:9092"
+      # ports:
+      #   - "9092:9092"
       volumes:
         - "/kafka/broker-1:/bitnami/kafka/data"
       environment:
